TODO
* add block support for write ?
* validate WINAPI versions of fallback functions
* add fallback versions of
  - GetLastError
* add libcfile_codepage.h and codepage functions
* improve tests ?
  - add open close
  - add write when opened with read ?
  - add IO control tests ?
  - add test to retrieve size from device ?
* what about disk full on write errno = ENOSPC

Notes:
* WINAPI ReadFile
  When the file is UNBUFFERED it appears that nNumberOfBytesToRead must be a
  multiple of sector size. Any other value will result in error 0x57
  (ERROR_INVALID_PARAMETER).

20160409
* worked on tests
* added remove file function
* worked on fallback functions
* remove stream functions

20160105
* 2016 update

20150729
* worked on tests

20150104
* corrections in include header
* updated man page: libcfile.3

20150101
* 2015 update

20141229
* updated dpkg files

20141015
* changes for deployment

20141011
* worked on utility scripts
* code clean up

20140915
* changes for project site move

20140624
* updated msvscpp files

20140527
* code clean up

20140525
* worked on non-blocking Windows device file support

20140503
* worked on block-based read to support Windows device files

20140502
* worked on block-based read to support Windows device files

20140501
* worked on dynamic late binding functions
* worked on block-based read to support Windows device files

20140428
* small changes
* Fix for devices that don't support fadvice

20140105
* 2014 update
* updated dependencies

20130809
* updated dependencies
* bug fix for file access behavior

20130609
* fix in .pc.in file

20130509
* updated dependencies
* removed WINAPI CRT function fallbacks

20130414
* changes to ioctl detection in configure

20130413
* updated dependencies

20130404
* textual changes
* updated dependencies

20130329
* worked on IO control read function
* changes for Windows CRT functions
* added posix_fadvise support

20130328
* worked on IO control read function