@@ -1,10 +1,12 @@
 libcfile is a library for cross-platform C file functions.
 
 Project information:
+
 * Status: alpha
 * Licence: LGPLv3+
 
 For more information see:
+
 * Project documentation: https://github.com/libyal/libcfile/wiki/Home
 * How to build from source: https://github.com/libyal/libcfile/wiki/Building
 
