@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libcfile],
- [20160409],
+ [20160419],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
