@@ -1,9 +1,7 @@
 /*
- * The internal libuna header
+ * The libuna header wrapper
  *
  * Copyright (C) 2008-2016, Joachim Metz <joachim.metz@gmail.com>
- *
- * Refer to AUTHORS for acknowledgements.
  *
  * This software is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
@@ -38,6 +36,7 @@
 #include <libuna_utf16_string.h>
 #include <libuna_utf32_stream.h>
 #include <libuna_utf32_string.h>
+#include <libuna_utf7_stream.h>
 #include <libuna_utf8_stream.h>
 #include <libuna_utf8_string.h>
 #include <libuna_types.h>
@@ -53,7 +52,7 @@
 
 #include <libuna.h>
 
-#endif
+#endif /* defined( HAVE_LOCAL_LIBUNA ) */
 
-#endif
+#endif /* !defined( _LIBCFILE_LIBUNA_H ) */
 
