@@ -1,4 +1,4 @@
-.Dd April  9, 2016
+.Dd April 19, 2016
 .Dt libcfile 3
 .Os libcfile
 .Sh NAME
@@ -14,12 +14,18 @@ Support functions
 .Fn libcfile_get_version "void"
 .Ft int
 .Fn libcfile_file_exists "const char *filename, libcfile_error_t **error"
+.Ft int
 .Fn libcfile_file_remove "const char *filename, libcfile_error_t **error"
+.Ft int
+.Fn libcfile_file_remove_with_error_code "const char *filename, uint32_t *error_code, libcfile_error_t **error"
 .Pp
 Available when compiled with wide character string support:
 .Ft int
 .Fn libcfile_file_exists_wide "const wchar_t *filename, libcfile_error_t **error"
+.Ft int
 .Fn libcfile_file_remove_wide "const wchar_t *filename, libcfile_error_t **error"
+.Ft int
+.Fn libcfile_file_remove_wide_with_error_code "const wchar_t *filename, uint32_t *error_code, libcfile_error_t **error"
 .Pp
 Notify functions
 .Ft void
