@@ -1,7 +1,7 @@
 #!/bin/bash
 # Library API functions testing script
 #
-# Version: 20160403
+# Version: 20160411
 
 EXIT_SUCCESS=0;
 EXIT_FAILURE=1;
@@ -91,6 +91,8 @@ then
 fi
 
 source ${TEST_RUNNER};
+
+RESULT=${EXIT_IGNORE};
 
 for TEST_FUNCTION in ${TEST_FUNCTIONS};
 do
